--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"private": true,
 	"version": "1.0.0",
 	"type": "module",
+	"keywords": ["vue3", "login"],
 	"scripts": {
 		"dev": "vite",
 		"build": "vite build",
