--- a/packages/package.json
+++ b/packages/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "login-factory-render-vue3",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"type": "module",
+	"keywords": ["vue3", "login"],
 	"dependencies": {
 		"@element-plus/icons-vue": "^1.1.4",
 		"element-plus": "^2.2.17",
